crates/nash-parse/src/expression/snapshots/nash_parse__expression__bytes__tests__empty.snap
---
source: crates/nash-parse/src/expression/bytes.rs
description: "Code:\n\n#\"\""
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 4,
        },
    },
    value: Bytes(
        [],
    ),
}
