crates/nash-parse/src/expression/snapshots/nash_parse__expression__bytes__tests__error_bad_digit.snap
---
source: crates/nash-parse/src/expression/bytes.rs
description: "Code:\n\n#\"zz\""
---
Bytes(
    BadHexDigit(
        3,
    ),
    1,
    3,
)
