crates/nash-parse/src/expression/snapshots/nash_parse__expression__bytes__tests__error_endless.snap
---
source: crates/nash-parse/src/expression/bytes.rs
description: "Code:\n\n#\"ab"
---
Bytes(
    Endless,
    1,
    5,
)
