crates/nash-parse/src/expression/snapshots/nash_parse__expression__bytes__tests__error_odd_length.snap
---
source: crates/nash-parse/src/expression/bytes.rs
description: "Code:\n\n#\"f\""
info: diagnostic
---
nash::syntax

  × Byte string has an odd number of hexadecimal digits.
   ╭─[src/Main.nash:1:1]
 1 │ #"f"
   · ─
   ╰────
  help: Use two hexadecimal digits per byte.
