crates/nash-parse/src/expression/snapshots/nash_parse__expression__bytes__tests__lower_hex.snap
---
source: crates/nash-parse/src/expression/bytes.rs
description: "Code:\n\n#\"ff00\""
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 8,
        },
    },
    value: Bytes(
        [
            255,
            0,
        ],
    ),
}
